k8s/litterservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litterservice-deployment
  labels:
    app: litterservice
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: litterservice
  template:
    metadata:
      labels:
        app: litterservice
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - litter-db
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: litterservice
          image: gitlab.lnu.se:5050/2dv013/student/team-5-burmese/2dv013-cloud-native-assignment-3-litterservice/litterservice:latest # CHANGE
          imagePullPolicy: Always
          ports:
            - containerPort: 13000
      imagePullSecrets:
        - name: regcred # Secret set as a secret in the cluster
---
apiVersion: v1
kind: Service
metadata:
  name: litterservice-service
  labels:
    app: litterservice
spec:
  selector:
    app: litterservice
  ports:
    - protocol: TCP
      port: 13000
      targetPort: 13000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: litter-svc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /litter/api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: litterservice-service
                port:
                  number: 13000
